[package]
name = "eggplant"
version = "0.1.0"
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[features]

[dependencies]
derive_more = { version = "2.0.1", features = [
    "deref_mut",
    "deref",
    "into_iterator",
    "debug",
] }
smallvec = "1.15.1"
symbol_table = { version = "0.4.0", features = ["global"] }
inventory = "0.3.20"
petgraph = "0.6.5"
dashmap = "6.1.0"
env_logger = "0.11.8"
log = "0.4.27"
eggplant-macros.workspace = true
egglog = { git = "https://github.com/MilkBlock/egglog", rev = "808a304" }
# egglog = { path = "../egglog" }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
graphviz-rust = "0.9.5"
serde = "1.0.224"
serde_json = "1.0.145"


[workspace]
members = ["eggplant-macros"]
resolver = "2"                # recommended 2021 Edition

[workspace.package]
edition = "2024"
version = "0.1.0"
description = "eggplant is a High-Level Rust API crate for Egglog"
repository = "https://github.com/MilkBlock/eggplant"
keywords = ["e-graphs", "egglog", "datalog", "compiler", "equality", "api"]
license = "MIT"
readme = "README.md"

[workspace.dependencies]
eggplant-macros = { path = "./eggplant-macros", version = "0.1.0" }
# egglog = { package= "eggplant-egglog",path = "./eggplant-egglog", version = "0.5.0"}
