[package]
name = "eggplant-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.3.0"
heck = "0.5.0"
darling = "0.20.11"
derive_more.workspace = true

