[package]
name = "eggplant-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "macros of eggplant"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.3.0"
heck = "0.5.0"
darling = "0.20.11"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
eggplant-transpiler.workspace = true
