[package]
name = "eggplant-transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ordered-float = "4.2"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.10"
heck = "0.5.0"
